--- a/#scorse/scss/footer.scss
+++ b/#scorse/scss/footer.scss
@@ -171,3 +171,33 @@
     margin-bottom: 0;
   }
 }
+
+@media (max-width: 700px) {
+  .footer__row {
+    flex-wrap: wrap;
+  }
+  .footer__item {
+    margin: 0 5px 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer_contact__row {
+    flex-direction: column;
+    padding: 60px 0 40px;
+    .footer_contact__item {
+      margin: 0 0 30px;
+      &:last-child {
+        margin: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .footer__row {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
