--- a/#scorse/scss/blog.scss
+++ b/#scorse/scss/blog.scss
@@ -43,7 +43,7 @@ body {
   display: -ms-flex;
   display: flex;
   max-width: 1170px;
-  margin: 0 auto;
+  margin: -100px auto 0;
 }
 .main_content__aside {
   max-width: 320px;
