--- a/css/blog.css
+++ b/css/blog.css
@@ -945,7 +945,7 @@ body {
   display: -ms-flex;
   display: flex;
   max-width: 1170px;
-  margin: 0 auto;
+  margin: -100px auto 0;
 }
 
 .main_content__aside {
